# pathology-docker

./: Dockerfile  README.md  build_and_deploy.sh  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  tests.py
